# HenkaEngine

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  manual_qa.yml
.github/workflows/: windows-ci.yml
assets/shaders/: basic_lit.frag  basic_lit.vert  debug_grid.frag  debug_grid.vert
docs/: action-api.md  architecture.md  building.md  coding-standard.md  editor-controls.md  external-game-projects.md  model-loading.md  package-provenance.md  persistence.md  physics.md  platform-support.md  repository-integrity.md  roadmap.md  runtime-foundations.md  ui.md
docs/help/: sandbox3d.md
docs/qa/: sandbox3d-manual-checklist.md
engine/: CMakeLists.txt
engine/include/henka/: action.h  assets.h  camera.h  core.h  engine.h  gizmo.h  henka.h  input.h  log.h  math.h  memory.h  mesh.h  model.h  persistence.h  physics.h  platform.h  renderer.h  result.h  scene.h  shader.h  texture.h  time.h  ui.h  workspace.h
engine/src/: henka_internal.h
engine/src/assets/: assets.c  model_obj.c
engine/src/core/: action.c  checked.h  engine.c  gizmo.c  log.c  math.c  memory.c  persistence.c  physics.c  result.c  time.c  workspace.c
engine/src/platform/: platform_sdl.c
engine/src/renderer/: mesh.c  renderer.c  renderer_opengl.c  shader.c  texture.c
engine/src/scene/: camera.c  scene.c
engine/src/ui/: ui.c  ui_internal.h
examples/sandbox3d/: CMakeLists.txt  editor_controls.c  editor_controls.h  interaction_tools.c  interaction_tools.h  main.c  physics_tools.c  physics_tools.h  workspace_tools.c  workspace_tools.h
scripts/: build_windows.ps1  check_packaged_sandbox3d_windows.ps1  check_public_repo_hygiene.ps1  check_repository_integrity.ps1  clean_windows.ps1  henka_script_common.ps1  package_sandbox3d_windows.ps1  run_packaged_sandbox3d_windows.ps1  run_sandbox3d.ps1  test_external_game_template_windows.ps1  test_windows.ps1  write_build_provenance.ps1
templates/external_game_minimal/: .gitignore  CMakeLists.txt  README.md
templates/external_game_minimal/assets/: README.md
templates/external_game_minimal/src/: main.c
tests/: CMakeLists.txt  test_action.c  test_assets.c  test_camera.c  test_editor_controls.c  test_gizmo.c  test_input.c  test_limits.c  test_main.c  test_material.c  test_math.c  test_memory.c  test_model.c  test_persistence.c  test_physics.c  test_result.c  test_sandbox3d_interaction.c  test_sandbox3d_physics.c  test_sandbox3d_workspace.c  test_scene.c  test_suite.h  test_ui.c  test_workspace.c
